--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -38,17 +38,17 @@
         <div class="col-md-6" style="height: 300px; margin-top: 30px; border-right: 3px solid black; border-radius: 3px; margin-bot: 30px;">
         <h3>Vous ete traducteurs?</h3>
             <ul>
-                <li>Text</li>
-                <li>text2</li>
-                <li>text3</li>
+                <li>Inscrivez vous</li>
+                <li>Selectionnez au moins deux langues</li>
+                <li>Faites vous plaisir !</li>
             </ul>
         </div>
         <div class="col-md-6" style="height: 300px; margin-top: 30px; margin-bot: 30px;">
             <h3>Vous etes developpeur?</h3>
             <ul>
-                <li>Text</li>
-                <li>text2</li>
-                <li>text3</li>
+                <li>Inscrivez vous</li>
+                <li>Rajoutez votre projet </li>
+                <li>Detaillez les sources de votre projet</li>
             </ul>
         
         </div> 
