--- a/templates/projet/index.html.twig
+++ b/templates/projet/index.html.twig
@@ -22,7 +22,7 @@
   {% for projet in projets %}
   <tr>
   <td> <a href="{{ path('source_all', {'id': projet.id}) }}"> {{ projet.Name()}}</a></td>
-  <td>  </td>
+  <td> Langue  </td>
   <td> {{ projet.getUserName() }} </td>
   <td> <a href="{{ path('projet_edit', {'id': projet.id}) }}" class="btn btn-primary">Edit</a></td>
   <td> <a href="{{ path('projet_del', {'id': projet.id}) }}" class="btn btn-danger" onCLick="return confirm('are you sure?')">Delet</a></td>
